OAKHILL/src/objects/Report_Generator__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Report Generator</relationshipLabel>
        <relationshipName>Report_Generator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Generator_Type__c</fullName>
        <label>Report Generator Type</label>
        <picklist>
            <picklistValues>
                <fullName>Capital Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Call Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Opened</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Report Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emailed except Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully Emailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Emailed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; Id , &quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Report Generator</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Generator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Generator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>